--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -42,14 +42,6 @@ a {
 
   }
 
-  .order-online {
-    border-radius: $radius;
-  }
-
-  .book-table {
-    border-radius: $radius;
-  }
-
   h2 {
     font-size: 26px;
     color: $color-light;
@@ -60,26 +52,52 @@ a {
 
   img {
     position: relative;
-    width: 280px;
+    width: 270px;
     height: 110px;
-    margin-right: 5px;
+    margin-right: 25px;
     z-index: 3;
     object-fit: cover;
-    padding-bottom: 5px;
+    border-radius: $radius;
   }
 }
 
 .open-hours {
-  margin-top: -25px;
   text-align: center;
   background: $color-main;
   color: $color-light;
   width: 100%;
   height: 120px;
   border-radius: $radius;
+  text-transform: uppercase;
 
-  h2 {
-    padding-top: 24px;
+  .link {
+    font-size: 16px;
+    
+    h2 {
+      padding-top: 24px;
+      transition: 1s;
+    }
+
+    h4 {
+      margin-top: 20px;
+      transition: 1s;
+      
+    }
+
+    &:hover {
+      color: $color-light;
+
+      h2 {
+        margin-bottom: 0px;
+        transition: 1s;
+      }
+
+      h4{
+        margin-top: 0px;
+        transition: 1s;
+        color: lighten($color-success, $amount: 10%);
+      }
+    }
   }
 }
 
@@ -89,7 +107,7 @@ a {
 
 .carousel-cell {
   width: 100%;
-  height: 160px;
+  height: 260px;
   margin-right: 10px;
   margin-bottom: 10px;
   background: $color-light;
@@ -133,10 +151,14 @@ a {
     }
 
     .img-container {
+      img {
+        transition: 0.5s;
+      }
+      
       &:hover{
         img {
           opacity: 0.3;
-          transition: all 0.3s;
+          transition: all 0.5s;
         }
 
         .fa-heart {
