--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -120,3 +120,13 @@
   }
 
 }
+
+@media (max-width: 767px) {
+  .product {
+    min-width: 600px;
+  }
+
+  .amount-wrapper {
+    min-width: 150px;
+  }
+}
